# bitspec

./: .gitignore  Cargo.toml  README.md
crates/bitspec/: Cargo.toml  README.md
crates/bitspec-wasm/: Cargo.toml  README.md
crates/bitspec-wasm/src/: convert.rs  error.rs  lib.rs
crates/bitspec/benches/: schema_parse.rs
crates/bitspec/src/: assembly.rs  bits.rs  compiled.rs  errors.rs  field.rs  fragment.rs  lib.rs  schema.rs  serde.rs  transform.rs
crates/bitspec/tests/: prop_read_bits.rs  prop_transform.rs
