[package]
name = "bitspec-wasm"
version = "0.1.0"
edition = "2024"
description = "WASM bindings for the bitspec binary schema and transform engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitspec = { path = "../bitspec", features = ["serde", "transform"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.149"
wasm-bindgen = { version = "0.2.108", features = ["serde"] }
